[gd_scene load_steps=3 format=2]

[ext_resource path="res://mods-unpacked/Luke-DmgPerPlayer/ui/hud/player_row.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/actual/base/font_26_outline_thick.tres" type="DynamicFont" id=2]

[node name="PlayerRow" type="HBoxContainer"]
margin_right = 300.0
margin_bottom = 31.0
rect_min_size = Vector2( 300, 1.36422e-12 )
size_flags_horizontal = 3
custom_constants/separation = 25
script = ExtResource( 1 )

[node name="IndexLabel" type="Label" parent="."]
margin_right = 84.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "玩家 1 :"

[node name="WaveLabel" type="Label" parent="."]
margin_left = 109.0
margin_right = 156.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 2

[node name="TotalLabel" type="Label" parent="."]
margin_left = 181.0
margin_right = 228.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 2

[node name="TestLabel" type="Label" parent="."]
margin_left = 253.0
margin_right = 300.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 2
